# US-Congress-Members-Trading-Analysis-UZH

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
data/internal/ml/: test_7d.csv  train_7d.csv
data/internal/networks/: democrat_members_14days.gml  democrat_members_1day.gml  democrat_members_7days.gml  representatives_14days.gml  republican_members_14days.gml  republican_members_1day.gml  republican_members_7days.gml  senators_7days.gml
data/internal/networks/ml/: test_7d.gml  train_7d.gml
networks/: all_members_1day.gml  all_members_7days.gml  representatives_1day.gml  representatives_7days.gml  senators_14days.gml  senators_1day.gml
notebooks/: 1.02-lte-networks-train-test-split-adrianmross-1.csv.ipynb  1.02-lte-networks-train-test-split-adrianmross-1.ipynb  1.03-lte-networks-train-test-split-adrianmross-2.ipynb  1.06-mvw-statistical-properties.ipynb  2.01-statistical-properties.ipynb  3.01-lte-graph-ml-1.ipynb  3.01-lte-graph-ml-2.ipynb  3.01-lte-random-forest-1.ipynb
notebooks/networks/: all_members_14days.gml
reports/: report.ipynb
us_congress_members_trading_analysis/: __init__.py  dataset.py  features.py  plots.py
us_congress_members_trading_analysis/modeling/: predict.py  train.py
